--- a/src/components/Friends/Friend.css
+++ b/src/components/Friends/Friend.css
@@ -1,1 +1,13 @@
-placeHolder
+.animals {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .animal {
+      flex-basis: 28%;
+      margin: 1em;
+      padding: 1em;
+      border: 1px solid goldenrod;
+  }
+  
