edited ArticleCard to make links clickable

--- a/src/components/Articles/Article.css
+++ b/src/components/Articles/Article.css
@@ -18,16 +18,16 @@
     margin-top: 0;
     margin-bottom: .5em;
     font-weight: bold;
-    color: rgb(43, 112, 241);
+    color: rgb(190, 142, 190);
   }
   
   .card-content p {
     font-size: 80%;
     color: darkslategrey;
   }
-/*  
+ 
   .card button {
-    background-color: cornflowerblue;
+    background-color: rgb(201, 100, 41);
     border: none;
     color: cornsilk;
     text-align: center;
@@ -37,15 +37,49 @@
     padding: .5em;
     border-radius: 2px;
     margin: .1em;
-    width: 100%;
+    
+  }
+
+  div.articles_card {
+    display:  flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+
   }
   
   .card button:hover {
     background-color: darkblue;
-  } */
+  }
 ​
   .card_article {
     display:  flex;
     flex-flow: row wrap;
     justify-content: space-around;
+  }
+
+  button.btn {
+    background-color: rgb(94, 121, 94);
+    border: none;
+    color: cornsilk;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    padding: .5em;
+    border-radius: 2px;
+    margin: .1em;
+    margin-bottom: 2%;
+    margin-top: 1%;
+  }
+
+  button {
+    background-color: rgb(94, 121, 94);
+    border: none;
+    color: cornsilk;
+    text-align: center;
+    text-decoration: none;
+    width:450px;
+    font-size: 14px;
+    border-radius: 2px;
+    margin: 2em;
   }
