--- a/src/components/Articles/Article.css
+++ b/src/components/Articles/Article.css
@@ -6,9 +6,10 @@
     box-shadow: 10 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; 5px rounded corners */
-    background: rgb(207, 81, 81);
+    background: rgb(161, 106, 106);
     border-style: solid;
     border-radius: 6%;
+    margin-top: 2%;
     /* margin-bottom: 2em;
     flex: 0 1 24%;
     width: 450px;
@@ -91,6 +92,7 @@ background-color: white;
     display:  flex;
     flex-flow: row wrap;
     justify-content: space-around;
+    padding-top: 3%;
   }
 
   button.btn {
