--- a/src/components/Events/Event.css
+++ b/src/components/Events/Event.css
@@ -11,3 +11,12 @@
       padding: 1em;
       border: 1px solid goldenrod;
   }
+  .first_event {
+      font-weight: bold;
+      font-size:  20px ;
+      background-color: antiquewhite;
+  }
+  .first_event__name {
+      font-size: 35px;
+      font-weight: bold;
+  }
