Did additional styling and commented all my code

--- a/src/components/Friends/Friend.css
+++ b/src/components/Friends/Friend.css
@@ -1,13 +1,16 @@
-.animals {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
   
-  .animal {
+  div.card {
       flex-basis: 28%;
       margin: 1em;
       padding: 1em;
-      border: 1px solid goldenrod;
+      margin-right: 60%;
+      background-color: rgb(161, 106, 106);
+      border-style: solid;
+      border-color: white;
+      border-width: .25em;
   }
   
+  .friend_name {
+      color: black;
+      font-weight: bold;
+  }
