--- a/src/components/Nutshell.css
+++ b/src/components/Nutshell.css
@@ -13,5 +13,17 @@ h1 {
   font-size: 2cm;
   text-align: center;
   font-family: Sigmar One, sans-serif;
-  color: rgb(185, 138, 51)
+  color: rgb(185, 138, 51);
+  border-style: solid;
+  border-color: white;
+  border-width: .5vw;
+  
+ 
+}
+
+.logo {
+  max-width: 10%;
+  margin-top: 0%;
+  margin-bottom: -6%;
+  margin-left: 2%;
 }
