--- a/src/components/Articles/Article.css
+++ b/src/components/Articles/Article.css
@@ -2,18 +2,12 @@
 /* CSS for article cards */
 
 .card_article {
-    /* Add shadows to create the "card" effect
-    box-shadow: 10 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; 5px rounded corners */
     background: rgb(161, 106, 106);
     border-style: solid;
     border-radius: 6%;
-    margin-top: 2%;
-    /* margin-bottom: 2em;
-    flex: 0 1 24%;
-    width: 450px;
-    border:black; */
+    margin-top: 1%;
+    border-color: grey;
+    border-width: .5em;
   }
   
   .header {
@@ -63,19 +57,20 @@
     font-weight: bold;
     font-size: .8cm;
     text-align: center;
-   border-radius: 50%;
-border-style: solid;
-border-color: black;
-background-color: white;
+    border-radius: 50%;
+    border-style: solid;
+    border-color: black;
+    background-color: white;
+    margin-top: .5em;
   }
 
   .edit_button {
     margin-bottom: 2%;
   }
 
-  a {
-    color: black;
-  }
+.url_button {
+  color: white;
+}
 
   div.articles__card {
     display:  flex;
@@ -85,7 +80,7 @@ background-color: white;
   }
   
   .card button:hover {
-    background-color: darkblue;
+    background-color: rgb(161, 106, 106);
   }
 ​
   .card_article {
@@ -108,6 +103,7 @@ background-color: white;
     margin: .1em;
     margin-bottom: 2%;
     margin-top: 1%;
+    margin-left: 3%;
   }
 
   button {
