--- a/src/components/Events/Event.css
+++ b/src/components/Events/Event.css
@@ -1,5 +1,5 @@
 
-.events {
+/* .events {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -10,4 +10,68 @@
       margin: 1em;
       padding: 1em;
       border: 1px solid goldenrod;
+  } */
+
+  .event {
+    background: rgb(161, 106, 106);
+    border-style: solid;
+    margin-top: 1%;
+    border-width: .5em;
+    border-color: grey;
+    margin-right: 70%;
+  }
+
+  .edit-button-event {
+    margin-bottom: 1em;
+    margin-top: 1em;
+    margin-left: 1em;
+     border-style: solid;
+     border-color: white;
+     margin-right: 1em;
+     font-weight: bold;
+  }
+
+  .delete-button-event {
+   margin-bottom: 1em;
+   margin-top: 1em;
+   margin-left: 1em;
+    border-style: solid;
+    border-color: white;
+    margin-right: 1em;
+    font-weight: bold;
+  }
+
+  .details-button-event {
+    margin-bottom: 1em;
+    margin-top: 1em;
+    margin-left: 1em;
+     border-style: solid;
+     border-color: white;
+     margin-right: 1em;
+     font-weight: bold;
+  }
+
+  .event__name {
+    font-weight: bold;
+    font-size: .8cm;
+    text-align: center;
+    border-radius: 50%;
+    border-style: solid;
+    border-color: black;
+    background-color: white;
+    margin-top: .5em;
+    padding-bottom: .3em;
+    
+  }
+ 
+  .event__location {
+    margin-left: 1em;
+  }
+
+  .event__date {
+    margin-left: 1em;
+  }
+
+  .btn-weather {
+    /* margin-left: 35%; */
   }
