--- a/src/components/task/Task.css
+++ b/src/components/task/Task.css
@@ -3,7 +3,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
-    background: aliceblue;
+    background-color: yellow;
     margin-bottom: 2em;
     flex: 0 1 24%;
   }
@@ -39,9 +39,16 @@
     padding: .5em;
     border-radius: 2px;
     margin: .1em;
-    width: 100%;
+    width: 50%;
   }
   
-  .card button:hover {
-    background-color: darkblue;
+
+  .section.task.card {
+    width: 50%;
   }
+
+  h3.task__name {
+background-color: yellow;
+  }
+
+ 
