--- a/src/components/Articles/Article.css
+++ b/src/components/Articles/Article.css
@@ -94,16 +94,19 @@
     background-color: rgb(185, 138, 51);
     border: none;
     color: cornsilk;
+    font-weight: bold;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 14px;
+    font-size: 18px;
     padding: .5em;
     border-radius: 2px;
     margin: .1em;
     margin-bottom: 2%;
     margin-top: 1%;
     margin-left: 3%;
+    padding-left:5%;
+    padding-right:5%;
   }
 
   button {
