--- a/src/components/task/Task.css
+++ b/src/components/task/Task.css
@@ -1,54 +1,45 @@
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
-    background-color: yellow;
-    margin-bottom: 2em;
-    flex: 0 1 24%;
-  }
-  
-  .card-content {
-    padding: .5em;
-  }
-  
-  .card-content h3 {
-    margin-top: 0;
-    margin-bottom: .5em;
-    font-weight: bold;
-    color: rgb(43, 112, 241);
-  }
-  
-  .card-content p {
-    font-size: 80%;
-    color: darkslategrey;
-  }
-  
-  .content-petname {
-    color: darkslategrey;
-  }
-  
-  .card button {
-    background-color: cornflowerblue;
-    border: none;
-    color: cornsilk;
+.task_card {
+  background-color: rgb(161, 106, 106);
+  border-style: solid;
+  border-width: .3em;
+  border-color: white;
+  margin-right: 60%;
+  margin-top: 1em;
+
+}
+
+.task__name {
+  font-weight: bold;
+    font-size: .8cm;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    padding: .5em;
-    border-radius: 2px;
-    margin: .1em;
-    width: 50%;
-  }
-  
+    background-color: white;
+    color: black;
+    margin-top: .5em;
+    padding-bottom: .3em;
+}
 
-  .section.task.card {
-    width: 50%;
-  }
+.task__completeBy {
+  margin-left: 1em;
+  font-weight: bold;
+}
 
-  h3.task__name {
-background-color: yellow;
-  }
+.task_button {
+  margin-bottom: 1em;
+  margin-top: 1em;
+  margin-left: 1em;
+   border-style: solid;
+   border-color: white;
+   margin-right: 1em;
+   font-weight: bold;
+}
 
- 
+.task_delete {
+  margin-bottom: 1em;
+  margin-top: 1em;
+  margin-left: 1em;
+   border-style: solid;
+   border-color: white;
+   margin-right: 1em;
+   font-weight: bold;
+}
+
