--- a/src/components/Messages/Message.css
+++ b/src/components/Messages/Message.css
@@ -1,126 +1,23 @@
-
-.card_article {
-    /* Add shadows to create the "card" effect
-    box-shadow: 10 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; 5px rounded corners */
-    background: rgb(161, 106, 106);
-    border-style: solid;
-    border-radius: 6%;
-    margin-top: 2%;
-    /* margin-bottom: 2em;
-    flex: 0 1 24%;
-    width: 450px;
-    border:black; */
-  }
-  
-  .header {
-    text-align: center;
-  }
-  .card_content {
-    padding: 1em; 
-  }
-
-  .card_article_content h3 {
-    margin-top: 0;
-    margin-bottom: .5em;
-    font-weight: bold;
-    color: rgb(190, 142, 190);
-  }
-  
-  .card-content p {
-    font-size: 80%;
-    color: darkslategrey;
-  }
+.message_card {
+  flex-basis: 28%;
+  margin: 1em;
+  padding: 1em;
+  margin-right: 70%;
+  background-color: rgb(161, 106, 106);
+  border-style: solid;
+  border-color: white;
+  border-width: .25em;
+}
  
-  .card button {
-    background-color: rgb(185, 138, 51);
-    border: none;
-    color: cornsilk;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    padding: .5em;
-    border-radius: 2px;
-    margin: .1em;
-    
-  }
+.message_message {
+  font-weight: bold;
+  font-size: .5cm;
+}
 
-  div.delete-article {
-   width: 450px;
-   margin-bottom: 2%;
-   margin-top: 2%;
-  }
+button.btn.btn-primary {
+  color: white;
+}
 
-  div.content {
-    padding-left: 3%;
-  }
-
-  p.title {
-    font-weight: bold;
-    font-size: .8cm;
-    text-align: center;
-   border-radius: 50%;
-border-style: solid;
-border-color: black;
-background-color: white;
-  }
-
-  .edit_button {
-    margin-bottom: 2%;
-  }
-
-  a {
-    color: black;
-  }
-
-  div.articles__card {
-    display:  flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-
-  }
-  
-  .card button:hover {
-    background-color: darkblue;
-  }
-​
-  .card_article {
-    display:  flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    padding-top: 3%;
-  }
-
-  button.btn {
-    background-color: rgb(185, 138, 51);
-    border: none;
-    color: cornsilk;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    padding: .5em;
-    border-radius: 2px;
-    margin: .1em;
-    margin-bottom: 2%;
-    margin-top: 1%;
-  }
-
-  button {
-    background-color:rgb(185, 138, 51);
-    border: none;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 30%;
-    border-style: solid;
-    border-width: medium;
-  }
-
-  section.section-content {
-/* background-color: lightgrey; */
-  }
-
-
+button.btn.btn-primary:hover {
+  background-color: grey;
+}
